--- a/shop/cart.html
+++ b/shop/cart.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../styles/design-system.css">
   <link rel="stylesheet" href="../styles/components.css">
   <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/product-card.css">
   <link rel="stylesheet" href="../styles/age-gate.css">
   <link rel="icon" type="image/png" href="../favicon.png">
   <script src="../scripts/age-gate.js"></script>
