--- a/shop/guns.html
+++ b/shop/guns.html
@@ -9,36 +9,72 @@
   <link rel="stylesheet" href="../styles/design-system.css">
   <link rel="stylesheet" href="../styles/components.css">
   <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/product-card.css">
   <link rel="stylesheet" href="../styles/age-gate.css">
   <link rel="icon" type="image/png" href="../favicon.png">
   <script src="../scripts/age-gate.js"></script>
 </head>
 <body>
-  <header class="site-header">
-    <div class="header-left">
-      <a href="../index.html" title="Return to Homepage">
-        <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo site-logo" id="site-logo">
-      </a>
+
+  <!-- TOP HEADER BAR -->
+  <header id="site-header" style="background:linear-gradient(90deg, rgba(24,26,27,0.45) 0%, rgba(24,26,27,0.18) 100%), url('../images/header-flag.png') center 35%/cover no-repeat; background-attachment:fixed; filter:brightness(1.25) contrast(1.15) saturate(1.2); position:sticky; top:0; z-index:100; box-shadow:0 4px 12px rgba(0,0,0,0.15);">
+    
+    <!-- Company Name (Top) -->
+    <div style="padding:0.6rem 2rem 0.5rem 2rem; text-align:center; position:relative; z-index:1;">
+      <h1 style="font-size:2.2rem !important; color:#fff !important; margin:0 !important; font-weight:800 !important; letter-spacing:4px !important; text-shadow:0 2px 8px rgba(0,0,0,0.5) !important;">MODULAR GUNWORKS LLC</h1>
     </div>
-    <div class="header-center">
-      <form class="search-form" action="/search">
-        <input type="text" class="search-bar" name="q" placeholder="Search products, brands, or answers...">
-        <button type="submit" class="search-button">
-          <img src="../images/search-icon.svg" alt="Search">
-        </button>
+
+    <!-- Headline & Subtext (Below) -->
+    <div style="padding:0.7rem 2rem 0.7rem 2rem; text-align:center; position:relative; z-index:1;">
+      <h2 style="font-size:1.25rem !important; color:#fff !important; margin:0 0 0.5rem 0 !important; font-weight:600 !important; text-shadow:0 2px 8px rgba(0,0,0,0.5) !important; letter-spacing:0.5px !important;">HUNTSVILLE'S TRUSTED GUN SHOP</h2>
+      <p style="font-size:0.95rem !important; color:#e0e0e0 !important; margin:0 !important; text-shadow:0 1px 4px rgba(0,0,0,0.4) !important; letter-spacing:0.5px !important;">Wide Selection • Competitive Prices • Expert Service</p>
+    </div>
+
+    <!-- Navigation Row (Logo | Search | Account) -->
+    <nav class="header-nav" style="display:flex !important; flex-direction:row !important; align-items:center !important; justify-content:center !important; padding:1rem 2rem !important; gap:2rem !important; position:relative !important;">
+      
+      <!-- Logo -->
+      <div style="flex-shrink:0 !important; position:absolute !important; left:2rem !important; z-index:1 !important;">
+        <a href="../index.html" style="display:flex !important; align-items:center !important; text-decoration:none !important;">
+          <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" style="height:60px !important; width:auto !important; background:transparent !important; border-radius:6px !important; padding:2px !important; box-shadow:0 2px 8px rgba(0,0,0,0.15) !important; cursor:pointer !important;">
+        </a>
+      </div>
+
+      <!-- Search Bar -->
+      <form class="search-bar" style="flex:0 1 auto !important; max-width:350px !important; display:flex !important; position:relative !important; z-index:1 !important;">
+        <input type="text" placeholder="Search ammo, gear, or answers..." style="flex:1 !important; padding:0.7rem 1rem !important; border-radius:4px 0 0 4px !important; font-size:0.9rem !important; border:none !important;">
+        <button type="submit" class="button" style="border-radius:0 4px 4px 0 !important; background:#c00 !important; color:#fff !important; border:none !important; padding:0.7rem 1.5rem !important; font-weight:600 !important; cursor:pointer !important; white-space:nowrap !important;">Search</button>
       </form>
-    </div>
-    <div class="header-right">
-      <a href="#">Account</a>
-      <a href="#">Help</a>
-      <a href="cart.html" class="cart-link">Cart <span id="cart-count">0</span></a>
-      <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
-        <span id="theme-icon"></span>
-      </button>
+
+      <!-- Account Links -->
+      <div style="display:flex !important; gap:2rem !important; align-items:center !important; position:absolute !important; right:2rem !important; z-index:1 !important; flex-shrink:0 !important;">
+        <a href="#" style="color:#fff !important; text-decoration:none !important; font-weight:600 !important; font-size:0.95rem !important; text-shadow:0 1px 4px rgba(0,0,0,0.3) !important;">Account</a>
+        <a href="#" style="color:#fff !important; text-decoration:none !important; font-weight:600 !important; font-size:0.95rem !important; text-shadow:0 1px 4px rgba(0,0,0,0.3) !important;">Help</a>
+        <a href="cart.html" style="color:#fff !important; text-decoration:none !important; font-weight:600 !important; font-size:0.95rem !important; text-shadow:0 1px 4px rgba(0,0,0,0.3) !important;">Cart</a>
+      </div>
+    </nav>
+
+    <!-- Main Categories Nav -->
+    <nav class="main-categories" style="background:var(--color-accent); padding:0.5rem 2rem; box-shadow:0 2px 8px rgba(0,0,0,0.04);">
+      <div class="flex" style="gap:2.5rem; justify-content:center;">
+        <a href="ammunition.html" class="main-cat-link">Ammunition</a>
+        <a href="magazines.html" class="main-cat-link">Magazines</a>
+        <a href="gun-parts.html" class="main-cat-link">Gun Parts</a>
+        <a href="gear.html" class="main-cat-link">Gear</a>
+        <a href="optics.html" class="main-cat-link">Optics & Sights</a>
+        <a href="reloading.html" class="main-cat-link">Reloading</a>
+        <a href="survival.html" class="main-cat-link">Prep & Survival</a>
+        <a href="brands.html" class="main-cat-link">Brands</a>
+        <a href="sale.html" class="main-cat-link">ON SALE</a>
+      </div>
+    </nav>
+
+    <!-- Promo Banner -->
+    <div style="background:linear-gradient(90deg, var(--color-primary) 0%, var(--color-accent) 100%); color:#fff; text-align:center; font-size:1.15rem; font-weight:600; padding:0.75rem 0; letter-spacing:1px;">
+      <span>Veteran-Owned • Free Shipping on Firearms • FFL Transfers - $25-$50</span>
     </div>
   </header>
   <!-- CATEGORY NAVIGATION -->
-  <nav class="category-nav">
     <a href="ammunition.html">Ammunition</a>
     <a href="guns.html" class="active-category">Guns</a>
     <a href="magazines.html">Magazines</a>
@@ -157,6 +193,7 @@
       <p>© 2026 Modular Gunworks LLC. All rights reserved. <a href="mailto:modulargunworks@gmail.com" style="color:#fff; text-decoration:underline;">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
+  <script src="../scripts/universal-product-loader.js"></script>
   <script src="../scripts/guns-loader.js"></script>
   <script src="../scripts/theme-toggle.js"></script>
   <script src="../scripts/side-cart.js"></script>
