style: improve shop page layout and styling
- Added responsive grid layout for sidebar + main content
- Sidebar: 280px fixed on desktop, full-width on mobile
- Improved filter group styling with better spacing
- Enhanced checkbox styling with brand color accent
- Added sticky positioning to sidebar
- Applied layout styles to all shop page types
- Improved visual hierarchy throughout

--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="../styles/components.css">
   <link rel="stylesheet" href="../styles/layout.css">
   <link rel="stylesheet" href="../styles/age-gate.css">
+  <link rel="stylesheet" href="../styles/product-card.css">
   <link rel="icon" type="image/png" href="../favicon.png">
   <script src="../scripts/age-gate.js"></script>
 </head>
@@ -412,7 +413,8 @@
       </div>
     </section>
   </main>
-</html>
+
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="footer-columns" style="display:flex; justify-content:center; gap:4rem; background:#181a1b; color:#fff; padding:2.5rem 1rem 1.5rem 1rem;">
       <div style="min-width:160px;">
@@ -458,3 +460,4 @@
   <script src="../scripts/ammo-loader.js"></script>
   <script src="../scripts/theme-toggle.js"></script>
 </body>
+</html>
