--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -119,10 +119,29 @@
     <aside class="sidebar sticky-sidebar">
       <h2>Filter Ammo</h2>
 
+      <!-- AMMUNITION TYPE - PRIMARY FILTER -->
+      <div id="filter-ammo-type" class="ammo-filter-group">
+        <button class="filter-header" data-filter="filter-ammo-type">
+          <h3>Ammunition Type</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content">
+          <li><label><input type="checkbox" data-ammo-type="Handgun"> Handgun Ammunition</label></li>
+          <li><label><input type="checkbox" data-ammo-type="Rifle"> Rifle Ammunition</label></li>
+          <li><label><input type="checkbox" data-ammo-type="Shotgun"> Shotgun Ammunition</label></li>
+          <li><label><input type="checkbox" data-ammo-type="Rimfire"> Rimfire Ammunition</label></li>
+        </ul>
+      </div>
 
+      <!-- CALIBER WITH SEARCH -->
       <div id="filter-caliber" class="ammo-filter-group">
-        <h3>Caliber</h3>
-        <ul class="filter-list">
+        <button class="filter-header" data-filter="filter-caliber">
+          <h3>Caliber</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <div class="filter-content" style="display: none;">
+          <input type="text" class="filter-search" placeholder="Search caliber..." data-target="filter-caliber">
+          <ul class="filter-list" style="max-height: 300px; overflow-y: auto;">
           <!-- Handgun -->
           <li><label><input type="checkbox" data-caliber="25 ACP"> 25 ACP</label></li>
           <li><label><input type="checkbox" data-caliber="30 Super Carry"> 30 Super Carry</label></li>
@@ -287,11 +306,18 @@
           <li><label><input type="checkbox" data-caliber="8.6 Blackout"> 8.6 Blackout</label></li>
           <li><label><input type="checkbox" data-caliber="8MM Mauser"> 8MM Mauser</label></li>
         </ul>
+        </div>
       </div>
 
+      <!-- BRAND WITH SEARCH -->
       <div id="filter-brand" class="ammo-filter-group">
-        <h3>Brand</h3>
-        <ul class="filter-list">
+        <button class="filter-header" data-filter="filter-brand">
+          <h3>Brand</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <div class="filter-content" style="display: none;">
+          <input type="text" class="filter-search" placeholder="Search brands..." data-target="filter-brand">
+          <ul class="filter-list" style="max-height: 250px; overflow-y: auto;">
           <li><label><input type="checkbox" data-brand="ADI World Class Ammunition"> ADI World Class Ammunition</label></li>
           <li><label><input type="checkbox" data-brand="Aguila Ammunition"> Aguila Ammunition</label></li>
           <li><label><input type="checkbox" data-brand="Ammo Inc"> Ammo Inc</label></li>
@@ -333,21 +359,51 @@
           <li><label><input type="checkbox" data-brand="Weatherby"> Weatherby</label></li>
           <li><label><input type="checkbox" data-brand="Winchester Ammunition"> Winchester Ammunition</label></li>
         </ul>
+        </ul>
+        </div>
       </div>
 
+      <!-- ROUNDS/COUNT FILTER -->
+      <div id="filter-rounds" class="ammo-filter-group">
+        <button class="filter-header" data-filter="filter-rounds">
+          <h3>Rounds Per Box</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content">
+          <li><label><input type="checkbox" data-rounds="20"> 20 Rounds</label></li>
+          <li><label><input type="checkbox" data-rounds="25"> 25 Rounds</label></li>
+          <li><label><input type="checkbox" data-rounds="50"> 50 Rounds</label></li>
+          <li><label><input type="checkbox" data-rounds="100"> 100 Rounds</label></li>
+          <li><label><input type="checkbox" data-rounds="250"> 250 Rounds</label></li>
+          <li><label><input type="checkbox" data-rounds="1000"> 1000 Rounds</label></li>
+        </ul>
+      </div>
+
+      <!-- BULLET TYPE -->
       <div id="filter-type" class="ammo-filter-group">
-        <h3>Bullet Type</h3>
-        <ul class="filter-list"></ul>
+        <button class="filter-header" data-filter="filter-type">
+          <h3>Bullet Type</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content" style="display: none;"></ul>
       </div>
 
+      <!-- CASE MATERIAL -->
       <div id="filter-case" class="ammo-filter-group">
-        <h3>Case Material</h3>
-        <ul class="filter-list"></ul>
+        <button class="filter-header" data-filter="filter-case">
+          <h3>Case Material</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content" style="display: none;"></ul>
       </div>
 
+      <!-- GRAIN WEIGHT -->
       <div id="filter-grain" class="ammo-filter-group">
-        <h3>Grain Weight</h3>
-        <ul class="filter-list">
+        <button class="filter-header" data-filter="filter-grain">
+          <h3>Grain Weight</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content">
           <li><label><input type="checkbox" data-grain="0-40"> 0–40 gr</label></li>
           <li><label><input type="checkbox" data-grain="41-80"> 41–80 gr</label></li>
           <li><label><input type="checkbox" data-grain="81-150"> 81–150 gr</label></li>
@@ -356,14 +412,22 @@
         </ul>
       </div>
 
+      <!-- SHOT SIZE -->
       <div id="filter-shot" class="ammo-filter-group">
-        <h3>Shot Size / Ounce of Shot</h3>
-        <ul class="filter-list"></ul>
+        <button class="filter-header" data-filter="filter-shot">
+          <h3>Shot Size / Ounce of Shot</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content" style="display: none;"></ul>
       </div>
 
+      <!-- PRICE -->
       <div id="filter-price" class="ammo-filter-group">
-        <h3>Price</h3>
-        <ul class="filter-list">
+        <button class="filter-header" data-filter="filter-price">
+          <h3>Price</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <ul class="filter-list filter-content">
           <li><label><input type="checkbox" data-price="0-9.99"> Under $10</label></li>
           <li><label><input type="checkbox" data-price="10-19.99">$10–$20</label></li>
           <li><label><input type="checkbox" data-price="20-39.99">$20–$40</label></li>
@@ -372,17 +436,18 @@
         </ul>
       </div>
 
-      <div id="filter-subcat" class="ammo-filter-group">
-        <h3>Subcategory</h3>
-        <ul class="filter-list"></ul>
-      </div>
-
+      <!-- AVAILABILITY -->
       <div id="filter-stock" class="ammo-filter-group">
-        <h3>Availability</h3>
-        <label>
-          <input type="checkbox" id="filter-in-stock">
-          In Stock Only
-        </label>
+        <button class="filter-header" data-filter="filter-stock">
+          <h3>Availability</h3>
+          <span class="filter-toggle">▼</span>
+        </button>
+        <div class="filter-content">
+          <label>
+            <input type="checkbox" id="filter-in-stock">
+            In Stock Only
+          </label>
+        </div>
       </div>
     </aside>
 
@@ -458,6 +523,7 @@
   </footer>
   <script src="../scripts/universal-product-loader.js"></script>
   <script src="../scripts/ammo-loader.js"></script>
+  <script src="../scripts/filters.js"></script>
   <script src="../scripts/theme-toggle.js"></script>
 </body>
 </html>
