--- a/about.html
+++ b/about.html
@@ -58,9 +58,11 @@
   </nav>
 
   <!-- HERO HEADER -->
-  <div class="hero-header">
-    <div class="hero-home-title">About Modular Gunworks LLC</div>
-    <div class="hero-banner-summary">A Veteran Owned Tactical Retailer Built on a Lifetime Outdoors</div>
+  <div class="hero-header" style="background: linear-gradient(135deg, #1e3a5f 0%, #2c5aa0 50%, #1e3a5f 100%); padding: 4rem 2rem; text-align: center; color: white; border-radius: 12px; margin: 3rem 2rem; box-shadow: 0 8px 24px rgba(30, 58, 95, 0.3); position: relative; overflow: hidden;">
+    <div style="position: relative; z-index: 2;">
+      <div class="hero-home-title" style="font-size: 2.8rem; font-weight: 950; letter-spacing: 3px; margin-bottom: 1rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.6), -1px -1px 2px rgba(255,255,255,0.2); color: #ffffff; text-transform: uppercase;">ABOUT MODULAR GUNWORKS LLC</div>
+      <div class="hero-banner-summary" style="font-size: 1.35rem; font-weight: 600; letter-spacing: 1px; text-shadow: 1px 1px 3px rgba(0,0,0,0.5); color: #e8f4ff;">A Veteran Owned Tactical Retailer Built on a Lifetime Outdoors</div>
+    </div>
   </div>
 
   <!-- MAIN CONTENT -->
