Fix: Comment out FFL Transfers link - not currently FFL licensed

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <h4>Info</h4>
         <ul>
           <li><a href="faq.html">FAQ</a></li>
-          <li><a href="ffl.html">FFL Transfers</a></li>
+          <!-- <li><a href="ffl.html">FFL Transfers</a></li> --> <!-- Not currently FFL licensed -->
           <li><a href="order-status.html">Order Status</a></li>
           <li><a href="shipping.html">Shipping Info</a></li>
         </ul>
