chore: Fix product image placeholders and verify API credentials

--- a/shop/ammunition-new.html
+++ b/shop/ammunition-new.html
@@ -462,7 +462,7 @@
         price: 12.99,
         originalPrice: 14.99,
         inventory: 450,
-        image: "../images/products/federal-9mm.jpg"
+        image: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='250'%3E%3Crect fill='%23f0f0f0' width='200' height='250'/%3E%3Ctext x='50%25' y='50%25' font-size='14' text-anchor='middle' dy='.3em' fill='%23666'%3EFederal 9mm%3C/text%3E%3C/svg%3E"
       },
       {
         id: "CC45ACP001",
@@ -471,7 +471,7 @@
         price: 18.50,
         originalPrice: 21.50,
         inventory: 0,
-        image: "../images/products/speer-45.jpg"
+        image: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='250'%3E%3Crect fill='%23f0f0f0' width='200' height='250'/%3E%3Ctext x='50%25' y='50%25' font-size='14' text-anchor='middle' dy='.3em' fill='%23666'%3ESpeer 45 ACP%3C/text%3E%3C/svg%3E"
       }
     ];
 
