--- a/shop/optics.html
+++ b/shop/optics.html
@@ -82,15 +82,18 @@
     </div>
   </header>
 
-  <nav class="category-nav">
-    <a href="ammunition.html">Ammunition</a>
-    <a href="guns.html">Firearms</a>
-    <a href="optics.html" class="active">Optics</a>
-    <a href="gear.html">Gear</a>
-    <a href="magazines.html">Magazines</a>
-    <a href="reloading.html">Reloading</a>
-    <a href="gun-parts.html">Gun Parts</a>
-  </nav>
+   <nav class="category-nav">
+      <a href="shop/ammunition.html">Ammunition</a>
+      <a href="shop/magazines.html">Magazines</a>
+      <a href="shop/gun-parts.html">Gun Parts</a>
+      <a href="shop/gear.html">Gear</a>
+      <a href="shop/optics.html">Optics</a>
+      <a href="shop/reloading.html">Reloading</a>
+      <a href="shop/survival.html">Survival</a>
+      <a href="shop/brands.html">Brands</a>
+      <a href="shop/sale.html">ON SALE</a>
+      <a href="services.html">Services</a>
+    </nav>
 
   <main>
     <div class="page-header">
