Fix: Hide carousel scrollbar to remove visual artifact

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
       scroll-behavior: smooth;
       padding: 1rem 0;
       scroll-snap-type: x mandatory;
+      scrollbar-width: none;
+    }
+
+    .carousel::-webkit-scrollbar {
+      display: none;
     }
 
     .carousel-item {
