Fix: Display services cards side by side

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     /* SERVICES SECTIONS */
     .services-grid {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
       gap: 2rem;
       margin-bottom: 3rem;
       max-width: 700px;
