--- a/services.html
+++ b/services.html
@@ -25,11 +25,11 @@
     main { max-width: 1400px; margin: 0 auto; padding: 3rem 2rem; }
     .page-title { font-size: 2.5rem; color: var(--color-bg-dark); margin-bottom: 3rem; text-align: center; }
     .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 4rem; }
-    .service-card { background: #fafafa; border-left: 4px solid var(--color-primary); padding: 2rem; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.3s ease; }
+    .service-card { background: #fafafa; border-left: 4px solid var(--color-primary); padding: 2rem; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.3s ease; display: flex; flex-direction: column; }
     .service-card:hover { transform: translateY(-4px); box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
     .service-card h2 { font-size: 1.8rem; color: var(--color-bg-dark); margin-bottom: 1rem; font-weight: 600; }
     .service-card i { margin-right: 0.5rem; color: var(--color-primary); }
-    .service-card p { color: #666; line-height: 1.6; margin-bottom: 1.5rem; }
+    .service-card p { color: #666; line-height: 1.6; margin-bottom: 1.5rem; flex-grow: 1; }
     .service-cta { display: inline-block; background: var(--color-primary); color: #fff; padding: 0.7rem 1.5rem; border-radius: 4px; text-decoration: none; font-weight: 600; transition: background 0.3s; }
     .service-cta:hover { background: #8b1a1a; }
   </style>
