Fix: Update footer to match standard footer structure

--- a/about.html
+++ b/about.html
@@ -89,33 +89,51 @@
     <p style="line-height: 1.8;">We are committed to serving our customers with integrity, providing quality products, and maintaining the highest standards of firearm safety and legal compliance. Your satisfaction is our priority.</p>
   </div>
 
+  </main>
+
   <!-- FOOTER -->
-  <footer class="site-footer">
+  <footer>
     <div class="footer-content">
       <div class="footer-section">
-        <h4>About Us</h4>
-        <p>Modular Gunworks LLC - Your trusted source for quality firearms and tactical gear.</p>
-      </div>
-      <div class="footer-section">
-        <h4>Quick Links</h4>
+        <h3>Shop</h3>
         <ul>
-          <li><a href="about.html">About</a></li>
+          <li><a href="shop/ammunition.html">Ammunition</a></li>
+          <li><a href="shop/magazines.html">Magazines</a></li>
+          <li><a href="shop/gun-parts.html">Gun Parts</a></li>
+          <li><a href="shop/gear.html">Gear</a></li>
+          <li><a href="shop/optics.html">Optics</a></li>
+          <li><a href="shop/reloading.html">Reloading</a></li>
+          <li><a href="shop/survival.html">Survival</a></li>
+          <li><a href="shop/brands.html">Brands</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Company</h3>
+        <ul>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="faq.html">FAQ</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
+
       <div class="footer-section">
-        <h4>Legal</h4>
+        <h3>Legal</h3>
         <ul>
-          <li><a href="terms.html">Terms of Service</a></li>
+          <li><a href="terms.html">Terms & Conditions</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="returns.html">Returns</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
         </ul>
       </div>
     </div>
+
     <div class="footer-bottom">
-      <p>&copy; 2026 Modular Gunworks LLC. All rights reserved.</p>
+      <p>© 2026 Modular Gunworks LLC. All rights reserved. | Veteran-Owned Business in Huntsville, Alabama</p>
+      <p>All firearm sales comply with federal, state, and local laws. FFL required for applicable items.</p>
     </div>
-  </main>
+  </footer>
 
   <!-- Age Gate Script -->
   <script src="scripts/age-gate.js"></script>
