--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@
   </header>
 
   <!-- PAGE HERO -->
-  <section class="hero">
+  <section class="hero" style="text-align: center;">
     <div class="hero-content">
       <h1>Frequently Asked Questions</h1>
       <p>Find answers to common questions about our gunsmithing services, FFL transfers, and products</p>
