Add Contact section to all page footers for site-wide consistency
- Updated 16 pages with contact information footer section
- Phone: (256) 384-3852
- Email: modulargunworks@gmail.com
- Location: Huntsville, AL
- Hours: M-F 9AM-6PM, Sat 10AM-4PM CT
- Pages updated: index.html, blog.html, returns.html, order-status.html
- Shop pages: guns.html, ammunition.html, gear.html, magazines.html, gun-parts.html, optics.html, reloading.html, survival.html, sale.html, brands.html

--- a/faq.html
+++ b/faq.html
@@ -727,27 +727,36 @@
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-section">
-        <h4>About Us</h4>
-        <p>Modular Gunworks LLC - Your trusted source for quality firearms and tactical gear.</p>
+        <h3>About Us</h3>
+        <p>Modular Gunworks LLC - Your trusted source for quality firearms, gunsmithing services, and tactical gear in Huntsville, Alabama.</p>
       </div>
       <div class="footer-section">
-        <h4>Quick Links</h4>
+        <h3>Quick Links</h3>
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="faq.html">FAQ</a></li>
+          <li><a href="services.html">Services</a></li>
         </ul>
       </div>
       <div class="footer-section">
-        <h4>Legal</h4>
+        <h3>Legal</h3>
         <ul>
           <li><a href="terms.html">Terms of Service</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="ffl-transfers.html">FFL Information</a></li>
         </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p><strong>Phone:</strong> (256) 384-3852<br>
+        <strong>Email:</strong> modulargunworks@gmail.com<br>
+        <strong>Location:</strong> Huntsville, AL<br>
+        <strong>Hours:</strong> M-F 9AM-6PM, Sat 10AM-4PM CT</p>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2026 Modular Gunworks LLC. All rights reserved.</p>
+      <p>&copy; 2026 Modular Gunworks LLC. All rights reserved. | Veteran Owned & Operated</p>
     </div>
   <!-- Age Gate Script -->
   <script src="scripts/age-gate.js"></script>
