--- a/order-status.html
+++ b/order-status.html
@@ -150,6 +150,45 @@
     </div>
   </main>
 
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>Modular Gunworks LLC - Your trusted source for quality firearms, ammunition, and tactical gear.</p>
+      </div>
+      <div class="footer-section">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="services.html">Services</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Legal</h3>
+        <ul>
+          <li><a href="terms.html">Terms</a></li>
+          <li><a href="privacy.html">Privacy</a></li>
+          <li><a href="returns.html">Returns</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
+          <li><a href="ffl-transfers.html">FFL Transfers</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p><strong>Phone:</strong> (256) 384-3852<br>
+        <strong>Email:</strong> modulargunworks@gmail.com<br>
+        <strong>Location:</strong> Huntsville, AL<br>
+        <strong>Hours:</strong> M-F 9AM-6PM, Sat 10AM-4PM CT</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>© 2026 Modular Gunworks LLC. All rights reserved. | Veteran-Owned Business in Huntsville, Alabama</p>
+    </div>
+  </footer>
+
   <script>
     function searchOrder() {
       const orderNumber = document.getElementById('order-input').value.trim();
