--- a/shop/gun-parts.html
+++ b/shop/gun-parts.html
@@ -204,6 +204,13 @@
           <li><a href="../order-status.html">Order Status</a></li>
         </ul>
       </div>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p><strong>Phone:</strong> (256) 384-3852<br>
+        <strong>Email:</strong> modulargunworks@gmail.com<br>
+        <strong>Location:</strong> Huntsville, AL<br>
+        <strong>Hours:</strong> M-F 9AM-6PM, Sat 10AM-4PM CT</p>
+      </div>
     </div>
     <div class="footer-bottom">
       <p>© 2026 Modular Gunworks LLC. All rights reserved. | Veteran-Owned Business in Huntsville, Alabama</p>
