--- a/shop/guns.html
+++ b/shop/guns.html
@@ -152,6 +152,13 @@
           <li><a href="../privacy.html">Privacy Policy</a></li>
         </ul>
       </div>
+      <div class="footer-section">
+        <h4>Contact</h4>
+        <p><strong>Phone:</strong> (256) 384-3852<br>
+        <strong>Email:</strong> modulargunworks@gmail.com<br>
+        <strong>Location:</strong> Huntsville, AL<br>
+        <strong>Hours:</strong> M-F 9AM-6PM, Sat 10AM-4PM CT</p>
+      </div>
     </div>
     <div class="footer-bottom">
       <p>&copy; 2026 Modular Gunworks LLC. All rights reserved.</p>
